--- a/wiki/index.html
+++ b/wiki/index.html
@@ -143,6 +143,8 @@ Error message and password prompt
 
 <li>$:/config/DownloadSaver/AutoSave</li>
 
+<li>$:/config/Toolbar/Text</li>
+
 <li>$:/core</li>
 
 <li>$:/GitHub/Filename</li>
@@ -159,9 +161,13 @@ Error message and password prompt
 
 <li>$:/state/tab-2065006209</li>
 
+<li>$:/state/tab/sidebar--595412856</li>
+
 <li>$:/status/RequireReloadDueToPluginChange</li>
 
 <li>$:/StoryList</li>
+
+<li>$:/theme</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
@@ -183,6 +189,9 @@ Error message and password prompt
 <div id="storeArea" style="display:none;">
 <div created="20210125045415261" modified="20210125045444087" title="$:/config/DownloadSaver/AutoSave">
 <pre>no</pre>
+</div>
+<div created="20210125045607041" modified="20210125045607041" title="$:/config/Toolbar/Text">
+<pre>yes</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" name="Core" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.23">
 <pre>{
@@ -10063,17 +10072,23 @@ Error message and password prompt
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div created="20210125044752172" modified="20210125044757536" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20210125044752172" modified="20210125045551141" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Settings</pre>
 </div>
 <div created="20210125044759341" modified="20210125045454917" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
+<div created="20210125045514225" modified="20210125045516319" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/More</pre>
+</div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210125044750199" list="$:/ControlPanel" modified="20210125044750199" title="$:/StoryList">
+<div created="20210125044750199" list="$:/ControlPanel $:/config/Toolbar/Text" modified="20210125045605261" title="$:/StoryList">
 <pre></pre>
+</div>
+<div created="20210125045523577" modified="20210125045526748" title="$:/theme">
+<pre>$:/themes/tiddlywiki/snowwhite</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
 <pre>{
