Saved by TiddlyWiki

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -143,6 +143,8 @@ Error message and password prompt
 
 <li>$:/config/DownloadSaver/AutoSave</li>
 
+<li>$:/config/Toolbar/Icons</li>
+
 <li>$:/config/Toolbar/Text</li>
 
 <li>$:/core</li>
@@ -190,8 +192,11 @@ Error message and password prompt
 <div created="20210125045415261" modified="20210125045444087" title="$:/config/DownloadSaver/AutoSave">
 <pre>no</pre>
 </div>
-<div created="20210125045607041" modified="20210125045607041" title="$:/config/Toolbar/Text">
+<div created="20210125045616049" modified="20210125045620964" title="$:/config/Toolbar/Icons">
 <pre>yes</pre>
+</div>
+<div created="20210125045607041" modified="20210125045624224" title="$:/config/Toolbar/Text">
+<pre>no</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" name="Core" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.23">
 <pre>{
@@ -10084,7 +10089,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210125044750199" list="$:/ControlPanel $:/config/Toolbar/Text" modified="20210125045605261" title="$:/StoryList">
+<div created="20210125044750199" list="$:/ControlPanel" modified="20210125045605261" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210125045523577" modified="20210125045526748" title="$:/theme">
