--- a/wiki/index.html
+++ b/wiki/index.html
@@ -10047,16 +10047,16 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20210125045817878" modified="20210125045817878" title="$:/GitHub/Filename">
+<div created="20210125050359975" modified="20210125050359975" title="$:/GitHub/Filename">
 <pre>index.html</pre>
 </div>
-<div created="20210125045813146" modified="20210125045813146" title="$:/GitHub/Path">
+<div created="20210125050355927" modified="20210125050355927" title="$:/GitHub/Path">
 <pre>/wiki/</pre>
 </div>
-<div created="20210125045803519" modified="20210125045807862" title="$:/GitHub/Repo">
+<div created="20210125050323864" modified="20210125050323864" title="$:/GitHub/Repo">
 <pre>nathanwon9/tiddlywiki</pre>
 </div>
-<div created="20210125045822384" modified="20210125045822384" title="$:/GitHub/Username">
+<div created="20210125050327095" modified="20210125050327095" title="$:/GitHub/Username">
 <pre>nathanwon9</pre>
 </div>
 <div title="$:/isEncrypted">
@@ -13911,16 +13911,16 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20210125045743816" modified="20210125045746415" title="$:/state/tab-1749438307">
+<div created="20210125050157385" modified="20210125050159038" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20210125045747836" modified="20210125045747836" title="$:/state/tab-2065006209">
+<div created="20210125050200327" modified="20210125050203540" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210125045741005" list="$:/ControlPanel GettingStarted" modified="20210125045741005" title="$:/StoryList">
+<div created="20210125050155692" list="$:/ControlPanel" modified="20210125050155693" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
