--- a/wiki/index.html
+++ b/wiki/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>我的 TiddlyWiki — 一个非线性的网页式笔记</title>
+<title>Nathan TiddlyWiki — wiki</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -157,11 +157,19 @@ Error message and password prompt
 
 <li>$:/languages/zh-Hans</li>
 
+<li>$:/SiteSubtitle</li>
+
+<li>$:/SiteTitle</li>
+
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
 
+<li>$:/state/tab/sidebar--595412856</li>
+
 <li>$:/status/RequireReloadDueToPluginChange</li>
+
+<li>$:/status/UserName</li>
 
 <li>$:/StoryList</li>
 
@@ -13911,16 +13919,28 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20210125050157385" modified="20210125050159038" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20210125050444853" modified="20210125050446971" title="$:/SiteSubtitle">
+<pre>wiki</pre>
+</div>
+<div created="20210125050441084" modified="20210125050442099" title="$:/SiteTitle">
+<pre>Nathan TiddlyWiki</pre>
+</div>
+<div created="20210125050157385" modified="20210125050434724" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20210125050200327" modified="20210125050203540" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
+<div created="20210125050425689" modified="20210125050428776" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Tools</pre>
+</div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210125050155692" list="$:/ControlPanel" modified="20210125050155693" title="$:/StoryList">
+<div created="20210125050450230" creator="N" modified="20210125050451054" modifier="Natha" title="$:/status/UserName">
+<pre>Nathan</pre>
+</div>
+<div created="20210125050155692" list="$:/ControlPanel" modified="20210125050432323" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
